--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 <!--bia-->   
 
 
+    <div class="bia">
+        <div class="search"><h1><b>Search by Food</h1></b>
+        </div>
+        <div class="visao"><h3>View All ></h3>
+            <div class="bolinha1"><h3><</h3></div>
+        </div>
+    </div>
 
 
 
