--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
     <div class="bia">
         <div class="search"><h1><b>Search by Food</h1></b>
         </div>
-        <div class="visao"><h3>View All ></h3>
-            <div class="bolinha1"><h3><</h3></div>
+        <div class="visao">
+            <h3>View All > </h3>
+            <div class="bolinha1"><img src="./assets/icons/icons8-menor-que-30.png"></div>
+
+            <div class="bolinha1"><img src="./assets/icons/icons8-maior-que-30.png"></div>
         </div>
     </div>
     
