--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
 
             <header>
                 <div class="title">
-                    <img src="assets/img/icone hamb.jpg" alt="" width="20%" height="70%">
+                    <img src="./img/icone hamb.jpg" alt="" width="20%" height="70%">
                     <h2>food</h2>
                     <h3>wagon</h3>
                 </div>
 
                 <div class="middle">
                     <p><b>Deliver to:</b></p>
-                    <img src="assets/img/loc.jpg" alt="" width="5%" height="60%">
+                    <img src="./img/loc.jpg" alt="" width="5%" height="60%">
                     <p>Current Location <b>Mohammadpur Bus Stand, Dhaka</b></p>
                 </div>
 
                 <div class="end">
-                    <img src="assets/img/lupa.jpg" alt="" width="30%" height="%">
+                    <img src="./img/lupa.jpg" alt="" width="30%" height="%">
                     <p><b>Search Food</b></p>
                 </div>
 
                 <div class="login">
-                    <img src="assets/img/login.jpg" alt="" width="30%" height="100%">
+                    <img src="./img/login.jpg" alt="" width="30%" height="100%">
                     <p><b>Login</b></p>
                 </div>
             </header>
@@ -49,20 +49,20 @@
                     <div class="box">
 
                         <div class="top">
-                            <img src="assets/img/delivery.png" alt="" width="20px">
+                            <img src="./img/delivery.png" alt="" width="20px">
                             <p> Delivery</p>
-                            <img src="assets/img/pickup.png" alt="" width="20px">
+                            <img src="./img/pickup.png" alt="" width="20px">
                             <p>Pickup</p>
                         </div>
 
                         <div class="bottom">
                             <div class="boxadress">
-                                <img src="assets/img/location.png" alt="" width="40px">
+                                <img src="./img/location.png" alt="" width="40px">
                                 <p>Enter Your Address</p>
                             </div>
 
                             <div class="boxfind">
-                                <img src="assets/img/find.png" alt="" width="30">
+                                <img src="./img/find.png" alt="" width="30">
                                 <p>Find Food</p>
                             </div>
                         </div>
@@ -73,7 +73,84 @@
                 </div>
             </div>
 
-            <section></section>
+            <section>
+                <div class="cards">
+                    <div class="salad">
+                        <img src="./img/salad.jpg" alt="" width="85%">
+
+                        <div class="sob1">
+                            <h1> 15</h1>
+
+                            <div class="text">
+                                <h2>%</h2>
+                                <h4>Off</h4>
+                            </div>
+                        </div>
+                        <h4><b>Greys Vage</b></h4>
+                        <div class="days1">
+
+                            <h5>6 Days Remaning</h5>
+                        </div>
+                    </div>
+
+                    <div class="pasta">
+                        <img src="./img/pasta.jpg" alt="" width="85%">
+
+                        <div class="sob2">
+                            <h1> 10</h1>
+
+                            <div class="text">
+                                <h2>%</h2>
+                                <h4>Off</h4>
+                            </div>
+                        </div>
+                        <h4><b>Greys Vage</b></h4>
+                        <div class="days2">
+
+                            <h5>6 Days Remaning</h5>
+                        </div>
+                    </div>
+
+                    <div class="vegetables">
+                        <img src="./img/vegetables.jpg" alt="" width="62%">
+
+                        <div class="sob3">
+                            <h1> 25</h1>
+
+                            <div class="text">
+                                <h2>%</h2>
+                                <h4>Off</h4>
+                            </div>
+                        </div>
+                        <h4><b>Greys Vage</b></h4>
+                        <div class="days3">
+
+                            <h5>7 Days Remaning</h5>
+                        </div>
+                    </div>
+
+                    <div class="soup">
+                        <img src="./img/soup.jpg" alt="" width="98%">
+
+                        <div class="sob4">
+                            <h1> 20</h1>
+
+                            <div class="text">
+                                <h2>%</h2>
+                                <h4>Off</h4>
+                            </div>
+                        </div>
+                        <h4><b>Greys Vage</b></h4>
+                        <div class="days4">
+
+                            <h5>8 Days Remaning</h5>
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </section>
         </div>
 
 
