--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 <!--pietra-->  
  
-<!--pietra-->   
+
 
 <div class="pietra">
 
@@ -335,7 +335,7 @@
                     <p>Enjoy the large size of sandwiches. Complete 
                         <span> perfect</span> slice of sandwiches.</p>
                     </div>
-                    <div class="botao">
+                    <div class="botao1">
                         <div class="Cardapio">Proceed to order </div>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
                         
                         <p>Celebrate the <span>holidays</span> with the best cuisine! Various dishes with mouth-watering flavors.</p>
                     </div>
-                    <div class="botao">
+                    <div class="botao1">
                         <div class="Cardapio">Proceed to order</div>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
                         
                         <p>Check out our wide range of<span> flavors</span>. Delicious options, prepared with fresh ingredients, will satisfy your hunger without breaking the <span>bank</span>. Take advantage and choose your favorite today!</p>
                     </div>
-                    <div class="botao">
+                    <div class="botao1">
                         <div class="Cardapio">Proceed to order </div>
                     </div>
                 </div>
